# octopus

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.integration.config.ts  wdio.conf.ts
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
dev/: ARCHITECTURE.md  DESIGN.md  ROADMAP.md
e2e/: setup.sh  tsconfig.json
e2e/helpers/: app.ts  assertions.ts  selectors.ts
e2e/specs/: smoke.spec.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  filesystem.rs  git_ops.rs  github.rs  hooks.rs  mod.rs  repos.rs  sessions.rs  shell.rs  worktree.rs
src-tauri/tests/: integration.rs
src/components/: AddRepoDialog.tsx  BrandMark.tsx  CodeEditor.tsx  CommandPalette.tsx  DiffPanel.tsx  DiffViewer.tsx  DispatchBoard.tsx  EditorTabs.tsx  ErrorBoundary.tsx  FileTree.tsx  GitChangesPanel.tsx  GitHubDetailView.tsx  GitHubSidebar.tsx  ImagePreview.tsx  IssueBacklog.tsx  KanbanCard.tsx  KeyboardShortcutsOverlay.tsx  LoadingSkeleton.tsx  NewSessionModal.tsx  OnboardingDialog.tsx  OutputPanel.tsx  PrerequisiteCheck.tsx  RepoSettings.tsx  ResizeHandle.tsx  ReviewComments.tsx  RightPanel.tsx  SessionCard.tsx  SessionDetail.tsx  SessionTimeline.tsx  SessionsView.tsx  SettingsModal.tsx  ShellPanel.tsx  SidebarTree.tsx  TerminalPanel.tsx  ThemeToggle.tsx  Toast.tsx
src/hooks/: useAsync.ts  useErrorNotification.ts  useImageAttachments.ts  useTauriEvent.ts  useTheme.ts
src/lib/: env.ts  errors.ts  keybindings.ts  notifications.ts  sessionActivity.ts  sound.ts  statusColors.ts  tauri.ts  types.ts  utils.ts
src/stores/: editorStore.ts  fileBrowserStore.ts  gitStore.ts  hookStore.ts  repoStore.ts  sessionStore.ts  themeStore.ts  (+1 more)
(+62 files in other folders)
